# xuehua

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  package.lua  store.dbml
cli/: Cargo.toml  busybox.static
cli/src/: main.rs  options.rs
cli/store/: store.db
cli/xuehua/: main.lua
cmd-runner/: go.mod  main.go
engine/: Cargo.toml  build.rs  engine.mmd
engine/src/: builder.rs  executor.rs  lib.rs  logger.rs  modules.rs  package.rs  planner.rs  store.rs  utils.rs
engine/src/executor/: bubblewrap.rs  runner.rs
engine/src/executor/runner/: bubblewrap.rs
engine/src/modules/: builder.rs  linker.rs  logger.rs  planner.rs  resolver.rs  store.rs  utils.rs
engine/src/modules/builder/: bubblewrap.rs  sandboxed.rs
engine/src/modules/store/: local.rs
engine/src/modules/store/local/: initialize.sql
engine/src/package/: id.rs  manifest.rs
engine/src/store/: local.rs
engine/src/store/local/: initialize.sql
src/: engine.rs  main.rs  options.rs  package.rs  utils.rs
src/engine/: builder.rs  executor.rs  package.rs  planner.rs  utils.rs
src/options/: base.rs  cli.rs
src/package/: build.rs
src/store/: fetcher.rs
xuehua/: main.lua
