[workspace]
resolver = "3"
members = ["cli", "engine"]

[workspace.dependencies]
log = { version = "0.4.27", features = ["kv", "kv_std"] }
serde = { version = "1.0.219", features = ["derive"] }
mlua = { version = "0.11.4", features = ["lua54", "serde", "macros", "send", "async"] }
tokio = { version = "1.48.0", features = ["sync", "rt-multi-thread"] }
tempfile = "3.23.0"
petgraph = "0.8.3"
