[package]
name = "xh-engine"
version = "0.1.0"
edition = "2024"

[features]
default = ["bubblewrap-builder"]
bubblewrap-builder = []
local-store = ["dep:rusqlite"]

[dependencies]
mlua.workspace = true
petgraph.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true

# builder
tempfile.workspace = true

# store
once_cell = "1.21.3"
blake3 = "1.8.2"
walkdir = "2.5.0"
jiff = { version = "0.2.15", default-features = false, features = ["alloc", "std", "perf-inline"] }
rusqlite = { version = "0.37.0", features = ["jiff"], optional = true }
serde_json = "1.0.145"
