[package]
name = "xh-engine"
version = "0.1.0"
edition = "2024"

[features]
default = []
bubblewrap-executor = []
local-store = ["dep:rusqlite"]

[dependencies]
petgraph.workspace = true
mlua.workspace = true
log.workspace = true
serde.workspace = true
tokio.workspace = true
tempfile.workspace = true
thiserror = "2.0.16"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
blake3 = "1.8.2"
walkdir = "2.5.0"
jiff = { version = "0.2.15", default-features = false, features = ["alloc", "std", "perf-inline"] }
serde_json = "1.0.145"
rusqlite = { version = "0.37.0", features = ["jiff"], optional = true }
async-trait = "0.1.89"
